--- a/NextBus10/res/layout/principal_activity.xml
+++ b/NextBus10/res/layout/principal_activity.xml
@@ -40,9 +40,10 @@
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/radioGroup1"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp"
-        android:text="Tempo de Chegada" />
+        android:layout_marginTop="48dp"
+        android:onClick="@string/tempoChegada"
+        android:text="@string/tempoChegada" />
 
 </RelativeLayout>
