--- a/NextBus10/res/layout/act_tempo_chegada.xml
+++ b/NextBus10/res/layout/act_tempo_chegada.xml
@@ -8,4 +8,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    <QuickContactBadge
+        android:id="@+id/quickContactBadge1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="109dp"
+        android:layout_marginTop="78dp" />
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/quickContactBadge1"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="32dp"
+        android:text="TextView" />
+
 </RelativeLayout>
