--- a/NextBus10/res/layout/act__sscreen.xml
+++ b/NextBus10/res/layout/act__sscreen.xml
@@ -6,24 +6,18 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".Act_SScreen" >
 
-    <QuickContactBadge
-        android:id="@+id/quickContactBadge1"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:src="@drawable/sscreen_nbus11"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="109dp"
-        android:layout_marginTop="78dp" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/quickContactBadge1"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="32dp"
-        android:text="TextView" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:contentDescription="@string/title_activity_act__sscreen"
+        
+    />
 
 </RelativeLayout>
