--- a/NextBus10/res/layout/act_principal.xml
+++ b/NextBus10/res/layout/act_principal.xml
@@ -8,17 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="58dp"
-        android:onClick="@string/tempoChegada"
-        android:text="@string/tempoChegada" />
-
     <RadioGroup
         android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
@@ -54,5 +43,15 @@
         android:layout_below="@+id/radio0"
         android:layout_marginLeft="58dp"
         android:text="RadioButton" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/radio1"
+        android:layout_alignLeft="@+id/radio1"
+        android:layout_marginBottom="32dp"
+        android:onClick="@string/tempoChegada"
+        android:text="@string/tempoChegada" />
 
 </RelativeLayout>
